--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
      <div class="Form-Container"> 
         <div class="col col-1">
             <div class="image-layer">
-                <img class="form-image-main" src="assets/img/white-outline.png" alt="form-image-main">
-                <img class="form-image" src="assets/img/dots.png" alt="form-image dots">
-                <img class="form-image" src="assets/img/coin.png" alt="form-image coin">
-                <img class="form-image" src="assets/img/spring.png" alt="form-image spring">
-                <img class="form-image" src="assets/img/rocket.png" alt="form-image rocket">
-                <img class="form-image" src="assets/img/cloud.png" alt="form-image cloud">
-                <img class="form-image" src="assets/img/stars.png" alt="form-image stars">
+                <img  src="assets/img/white-outline.png" class="form-image-main">
+                <img  src="assets/img/dots.png" class="form-image dots">
+                <img  src="assets/img/coin.png" class="form-image coin">
+                <img  src="assets/img/spring.png" class="form-image spring">
+                <img  src="assets/img/rocket.png" class="form-image rocket">
+                <img  src="assets/img/cloud.png" class="form-image cloud">
+                <img  src="assets/img/stars.png" class="form-image stars">
             </div>
             <p class="featured-words">You Are Minutes Way To Boost Your Skills With <b>TuCodeDao</b></p>
         </div>
